--- a/app/src/main/res/layout/fragment_by_username.xml
+++ b/app/src/main/res/layout/fragment_by_username.xml
@@ -17,6 +17,7 @@
                 android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/edit_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:hint="Enter your friend’s username"
                 android:inputType="textPassword" />
@@ -30,6 +31,7 @@
             android:layout_gravity="center_horizontal">
             <TextView
                 android:id="@+id/textView4"
+                android:textColor="#000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My username:"
@@ -42,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="candychat001"
+                android:textColor="#000"
                 android:id="@+id/textView7"
                 android:layout_gravity="center_vertical" />
         </LinearLayout>
@@ -53,7 +56,7 @@
             android:id="@+id/imageView12"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/searchfull"
+            android:src="@drawable/ic_search"
             android:layout_gravity="center_horizontal" />
 
 
