--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,14 +48,15 @@
 
 
 
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/txt_login"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:background="#fff"
             android:text="Log in "
-            android:textColor="#5db2d6" />
+            android:textColor="#5db2d6"
+            android:layout_gravity="center_horizontal" />
 
 
         <View
@@ -122,7 +123,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:textColor="#000000"
+                        android:textColor="#5db2d6"
                         android:text="Sign up now"
                         android:textAppearance="?android:attr/textAppearanceSmall"/>
                 </LinearLayout>
