--- a/app/src/main/res/layout/fragment_main_view_login.xml
+++ b/app/src/main/res/layout/fragment_main_view_login.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="fill_parent"
@@ -145,7 +144,7 @@
                             android:layout_gravity="bottom"
                             android:layout_weight="1"
                             android:textStyle="bold"
-                            android:textColor="@color/color_text"
+                            android:textColor="#B6B6B6"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:background="@drawable/button_bg_transparent"
                             android:text="Log in" />
