--- a/app/src/main/res/layout/fragment_recent_chats.xml
+++ b/app/src/main/res/layout/fragment_recent_chats.xml
@@ -7,6 +7,7 @@
 
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
