--- a/app/src/main/res/layout/fragment_registerion_completed.xml
+++ b/app/src/main/res/layout/fragment_registerion_completed.xml
@@ -1,6 +1,6 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#3daae2"
+    android:background="#0081B3"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -35,8 +35,8 @@
             <ImageView
                 android:layout_marginTop="50dp"
                 android:id="@+id/imageView6"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
+                android:layout_width="190dp"
+                android:layout_height="190dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/logo_candy_chat" />
 
@@ -79,8 +79,9 @@
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:background="#fff"
-                        android:textColor="#000"
+
+                        android:background="@drawable/btn_done"
+                        android:textColor="#fff"
                         android:layout_gravity="bottom"
                         android:text="START" />
                 </LinearLayout>
