--- a/app/src/main/res/layout/fragment_sign_email_final.xml
+++ b/app/src/main/res/layout/fragment_sign_email_final.xml
@@ -80,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="10dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="80dp"
                     android:orientation="horizontal"
                     android:paddingTop="5dp">
                     <LinearLayout
@@ -103,16 +103,25 @@
                             android:layout_marginRight="5dp"
                             android:orientation="vertical">
 
-                            <Button
+                            <TextView
                                 android:id="@+id/btn_register_now"
-                                android:layout_width="fill_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
+                                android:layout_gravity="center_horizontal"
                                 android:text="REGISTER NOW"
                                 android:layout_marginLeft="20dp"
-                                android:textColor="#000000"
+                                android:textStyle="bold"
+                                android:textColor="#0FA6E0"
                                 android:background="#fff"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <View
+                                android:id="@+id/view1"
+                                android:layout_width="120dp"
+                                android:layout_height="1dip"
+                                android:layout_marginLeft="20dp"
+                                android:background="#0FA6E0"
+                                android:layout_gravity="center_horizontal" />
                         </LinearLayout>
                     </LinearLayout>
 
