--- a/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
@@ -13,19 +13,7 @@
         android:paddingRight="20dp"
         android:paddingTop="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Sign up by email address"
-                android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="#000" />
-        </LinearLayout>
 
 
         <EditText
@@ -136,21 +124,53 @@
                             <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
 
                         <LinearLayout
+
                             android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:orientation="vertical">
 
-                            <Button
-                                android:id="@+id/btn_next"
-                                android:layout_width="150dp"
+                            <LinearLayout
+                                android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
+                                android:orientation="horizontal">
 
-                                android:text="Next"
-                                android:background="@drawable/btn"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="#3daae2" />
+                                <TextView
+                                    android:id="@+id/txt_skip"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="bottom"
+                                    android:text="SKIP"
+                                    android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                                <LinearLayout
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="bottom"
+                                    android:layout_marginRight="5dp"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:id="@+id/btn_register_now"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="center_horizontal"
+                                        android:text="REGISTER NOW"
+                                        android:layout_marginLeft="20dp"
+                                        android:textStyle="bold"
+                                        android:textColor="#0FA6E0"
+                                        android:background="#fff"
+                                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                                    <View
+                                        android:id="@+id/view1"
+                                        android:layout_width="120dp"
+                                        android:layout_height="1dip"
+                                        android:layout_marginLeft="20dp"
+                                        android:background="#0FA6E0"
+                                        android:layout_gravity="center_horizontal" />
+                                </LinearLayout>
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
 
