--- a/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_1.xml
@@ -87,31 +87,33 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txt_skip"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:text="SKIP"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                        <!--android:id="@+id/txt_skip"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center_vertical"-->
+                        <!--android:text="SKIP"-->
+                        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+                        <!--android:textStyle="bold" />-->
 
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"
                         android:orientation="vertical">
 
                         <Button
                             android:id="@+id/btn_next"
-                            android:layout_width="fill_parent"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
-                            android:layout_marginLeft="20dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginLeft="5dp"
                             android:text="Next"
+                            android:background="@drawable/btn"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textColor="#000000" />
+                            android:textColor="#3daae2" />
                     </LinearLayout>
                 </LinearLayout>
 
