--- a/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
@@ -119,7 +119,18 @@
                     android:layout_width="fill_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="vertical" />
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_marginTop="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="By registraion as a member the CandyChat in any way you  accpet these terms  of use and privacy policy"
+                        android:id="@+id/textView23" />
+                </LinearLayout>
+
+
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
@@ -148,16 +159,25 @@
                             android:layout_marginRight="5dp"
                             android:orientation="vertical">
 
-                            <Button
-                                android:id="@+id/btn_next"
-                                android:layout_width="fill_parent"
+                            <TextView
+                                android:id="@+id/btn_register_now"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
-                                android:text="Next"
+                                android:layout_gravity="center_horizontal"
+                                android:text="REGISTER NOW"
                                 android:layout_marginLeft="20dp"
-                                android:textColor="#000000"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                android:textColor="#0FA6E0"
+                                android:background="#fff"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <View
+                                android:id="@+id/view1"
+                                android:layout_width="120dp"
+                                android:layout_height="1dip"
+                                android:layout_marginLeft="20dp"
+                                android:background="#0FA6E0"
+                                android:layout_gravity="center_horizontal" />
                         </LinearLayout>
                     </LinearLayout>
 
