--- a/app/src/main/res/menu/menu_add_friends.xml
+++ b/app/src/main/res/menu/menu_add_friends.xml
@@ -5,7 +5,7 @@
 
 
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_cancle"
         android:title=""
         android:icon="@drawable/deletes"
         android:orderInCategory="100"
