--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#3daae2</color>
-    <color name="primary_dark">#3daae2</color>
+    <color name="primary">#0081B3</color>
+    <color name="primary_dark">#0081B3</color>
     <color name="primary_light">#BBDEFB</color>
     <color name="accent">#448AFF</color>
     <color name="primary_text">#212121</color>
