--- a/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
@@ -39,6 +39,7 @@
 
 
             <EditText
+                android:layout_marginTop="10dp"
                 android:id="@+id/input_email"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_width="match_parent"
@@ -49,6 +50,7 @@
 
 
             <EditText
+                android:layout_marginTop="10dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/input_password"
                 android:layout_width="match_parent"
@@ -145,6 +147,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:layout_marginLeft="60dp"
                             android:id="@+id/txt_skip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
