--- a/app/src/main/res/layout/fragment_registerion_completed.xml
+++ b/app/src/main/res/layout/fragment_registerion_completed.xml
@@ -33,12 +33,12 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:id="@+id/imageView6"
-                android:layout_width="190dp"
-                android:layout_height="190dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/logo_candy_chat" />
+                android:src="@drawable/done" />
 
             <TextView
                 android:layout_marginTop="10dp"
