--- a/app/src/main/res/layout/fragment_sign_email_final.xml
+++ b/app/src/main/res/layout/fragment_sign_email_final.xml
@@ -89,6 +89,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:layout_marginLeft="60dp"
                             android:id="@+id/txt_skip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
