--- a/app/src/main/res/layout/fragment_sign_phone_final.xml
+++ b/app/src/main/res/layout/fragment_sign_phone_final.xml
@@ -37,6 +37,7 @@
 
 
             <EditText
+                android:layout_marginTop="10dp"
                 android:id="@+id/input_username"
                 android:layout_width="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -48,6 +49,7 @@
 
 
             <EditText
+                android:layout_marginTop="10dp"
                 android:id="@+id/input_lastname"
                 android:layout_width="match_parent"
                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -90,6 +92,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:layout_marginLeft="60dp"
                             android:id="@+id/txt_skip"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
