--- a/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
@@ -17,7 +17,7 @@
 
 
         <EditText
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:id="@+id/input_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -28,6 +28,7 @@
 
         <EditText
             android:id="@+id/input_password"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your password*"
@@ -66,6 +67,7 @@
 
 
                 <LinearLayout
+
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -137,6 +139,7 @@
 
                                 <TextView
                                     android:id="@+id/txt_skip"
+                                    android:layout_marginLeft="60dp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="bottom"
