--- a/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_1.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_1.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:hint="Thailand(+66)"
             android:inputType="number"
+            android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColorHint="#B6B6B6" />
 
@@ -42,26 +43,11 @@
             android:id="@+id/input_number_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:hint="Enter your Phone number"
             android:inputType="number"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_Forgotten"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/password"
-                android:text="*must be 6-24 characters"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-        </android.support.design.widget.TextInputLayout>
 
 
         <LinearLayout
@@ -129,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginBottom="30dp"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal"
                     android:paddingTop="5dp">
