--- a/app/src/main/res/menu/menu_create_group.xml
+++ b/app/src/main/res/menu/menu_create_group.xml
@@ -5,7 +5,7 @@
 
 
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_save"
         android:title="Save"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
