--- a/app/src/main/res/menu/menu_main_recent_chat.xml
+++ b/app/src/main/res/menu/menu_main_recent_chat.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_add"
         android:title=""
-        android:icon="@drawable/ic_recenchat"
+        android:icon="@drawable/cancel"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
     <item
