--- a/app/src/main/res/layout/activity_main_add_friends.xml
+++ b/app/src/main/res/layout/activity_main_add_friends.xml
@@ -89,10 +89,11 @@
                 android:id="@+id/button2" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" />
+        <ExpandableListView
+            android:layout_marginTop="10dp"
+            android:id="@+id/expand"
+            android:groupIndicator="@null"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ExpandableListView>
     </LinearLayout>
 </LinearLayout>
