--- a/app/src/main/res/layout/dialog_friends.xml
+++ b/app/src/main/res/layout/dialog_friends.xml
@@ -40,11 +40,24 @@
                 android:id="@+id/textView20"
                 android:layout_gravity="center_vertical" />
 
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:layout_width="0dp"
+                android:layout_height="0dp"/>
+
+            <ImageView
+                android:id="@+id/satr"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/star_b"
+                android:layout_gravity="center_vertical" />
+
         </LinearLayout>
 
 
         <ImageView
-            android:id="@+id/imageButton"
+            android:id="@+id/img_friend"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
@@ -52,6 +65,8 @@
 
         <TextView
             android:id="@+id/name_title"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -66,7 +81,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:background="#DDDFDF"
+        android:background="#EEE"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
