--- a/app/src/main/res/layout/button_friend.xml
+++ b/app/src/main/res/layout/button_friend.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
@@ -14,23 +15,23 @@
             android:id="@+id/txtChat"
             android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/stars" />
+            android:layout_height="28dp"
+            android:drawableBottom="@drawable/profile_b" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/candy"
+            android:layout_height="28dp"
+            android:drawableBottom="@drawable/msg"
             android:id="@+id/txt_chat"
             android:gravity="center"
             android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="28dp"
             android:id="@+id/vdoChat"
             android:gravity="center"
-            android:drawableBottom="@drawable/home"
+            android:drawableBottom="@drawable/home_b"
             android:layout_weight="1" />
     </LinearLayout>
 
@@ -41,9 +42,10 @@
 
         <TextView
             android:layout_weight="1"
-            android:text="Add to favorite"
+            android:text="Profile"
             android:gravity="center"
             android:layout_marginTop="3dp"
+            android:textColor="@color/primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -51,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Chat"
+            android:textColor="@color/primary"
             android:layout_marginTop="3dp"
             android:gravity="center"
             android:layout_weight="1" />
@@ -59,6 +62,7 @@
             android:text="Home"
             android:gravity="center"
             android:layout_marginTop="3dp"
+            android:textColor="@color/primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
