--- a/app/src/main/res/layout/button_me.xml
+++ b/app/src/main/res/layout/button_me.xml
@@ -14,23 +14,23 @@
             android:id="@+id/txtChat"
             android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/profile" />
+            android:layout_height="28dp"
+            android:drawableBottom="@drawable/profile_b" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/candy"
+            android:layout_height="28dp"
+            android:drawableBottom="@drawable/msg"
             android:id="@+id/voiceChat"
             android:gravity="center"
             android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="28dp"
             android:id="@+id/vdoChat"
             android:gravity="center"
-            android:drawableBottom="@drawable/home"
+            android:drawableBottom="@drawable/home_b"
             android:layout_weight="1" />
     </LinearLayout>
 
@@ -43,6 +43,7 @@
             android:layout_weight="1"
             android:text="Profile"
             android:gravity="center"
+            android:textColor="@color/primary"
             android:layout_marginTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -51,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Chat"
+            android:textColor="@color/primary"
             android:layout_marginTop="3dp"
             android:gravity="center"
             android:layout_weight="1" />
@@ -58,6 +60,8 @@
         <TextView
             android:text="Home"
             android:gravity="center"
+            android:id="@+id/home"
+            android:textColor="@color/primary"
             android:layout_marginTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
