--- a/app/src/main/res/layout/dialog_group.xml
+++ b/app/src/main/res/layout/dialog_group.xml
@@ -24,27 +24,40 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/info_group"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/im"
-                android:layout_gravity="center_vertical" />
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/im" />
 
             <TextView
+                android:id="@+id/textView20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Group"
-                android:textColor="#000"
-                android:id="@+id/textView20"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#000" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal" />
+
+            <ImageView
+                android:id="@+id/satr"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/star_b" />
 
         </LinearLayout>
 
 
         <ImageView
-            android:id="@+id/imageButton"
+            android:id="@+id/img_group"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
@@ -57,38 +70,54 @@
             android:layout_gravity="center_horizontal"
             android:ellipsize="end"
             android:maxLines="3"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
             android:text="My team (24)"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#252525"
-            />
+            android:textColor="#252525" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
+            android:orientation="horizontal">
 
             <ImageView
-                android:src="@drawable/user"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:id="@+id/img_friend_1"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
-                android:id="@+id/imageView8" />
+                android:src="@drawable/user" />
 
             <ImageView
+                android:id="@+id/img_friend_2"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
-                android:src="@drawable/user"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/imageView9" />
+                android:src="@drawable/user" />
 
             <ImageView
+                android:id="@+id/img_friend_3"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
-                android:src="@drawable/user"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:id="@+id/imageView10" />
+                android:src="@drawable/user" />
+            <ImageView
+                android:id="@+id/img_friend_4"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/user" />
+
+            <ImageView
+                android:id="@+id/img_next"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/next_s"
+                android:layout_gravity="center_vertical" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -96,7 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearLayout"
-        android:background="#DDDFDF"
+        android:background="#EEE"
         android:orientation="horizontal">
 
         <include layout="@layout/button_friend" />
