--- a/app/src/main/res/layout/fragment_create_a_new_group.xml
+++ b/app/src/main/res/layout/fragment_create_a_new_group.xml
@@ -20,19 +20,20 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView11"
+                android:id="@+id/img_edit_profile"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/user" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            <EditText
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/input_username"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:text="group name"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:hint="Create group name..."
+                />
 
         </LinearLayout>
 
@@ -60,22 +61,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Group Participants "
+                android:text="Group members "
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
         </LinearLayout>
 
 
 
-            <EditText
-                android:layout_marginTop="10dp"
-                android:id="@+id/input_username"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableRight="@drawable/plus"
-                android:hint="Contact name..."
-                />
+
 
         <LinearLayout
             android:orientation="vertical"
