--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,12 +48,12 @@
 
 
 
-        <TextView
+        <Button
             android:id="@+id/txt_login"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:background="#fff"
+            android:background="@drawable/btn"
             android:text="Log in "
             android:textColor="#5db2d6"
             android:layout_gravity="center_horizontal" />
