--- a/app/src/main/res/layout/item_tatto.xml
+++ b/app/src/main/res/layout/item_tatto.xml
@@ -1,85 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fff">
+    android:background="#fff"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/sticker"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:scaleType="fitStart"
-        android:adjustViewBounds="true"/>
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart" />
 
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal">
 
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top">
+            android:layout_gravity="top"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
 
                 <TextView
                     android:id="@+id/cat_by"
-                    android:textColor="#252525"
-                    android:textSize="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tattoo name"/>
+                    android:text="Tattoo name"
+                    android:textColor="#252525"
+                    android:textSize="15dp" />
 
-                <TextView
-                    android:textColor="#000000"
-                    android:text=" by "
-                    android:textSize="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/txt_sticker_name"
-                    android:text=" by VDOMAX"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text=" by VDOMAX"
+                    android:textStyle="bold" />
 
 
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="Free"
-                        android:textStyle="bold"
-                        android:textSize="15dp"
+                        android:id="@+id/txt_free"
                         android:textColor="#CC0000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/txt_day_sticker"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -90,16 +81,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <ImageView
         android:id="@+id/download"
-        android:layout_marginRight="10dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_download"/>
+        android:layout_marginRight="10dp"
+        android:src="@drawable/download" />
 
 </LinearLayout>
