--- a/app/src/main/res/layout/list_child_friends.xml
+++ b/app/src/main/res/layout/list_child_friends.xml
@@ -40,7 +40,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/adduser"
+                android:src="@drawable/adduer_b"
                 android:id="@+id/imageView13"
                 android:layout_gravity="right" />
         </LinearLayout>
