--- a/app/src/main/res/menu/menu_create_group.xml
+++ b/app/src/main/res/menu/menu_create_group.xml
@@ -6,7 +6,8 @@
 
     <item
         android:id="@+id/action_save"
-        android:title="Save"
+        android:title=""
+        android:icon="@drawable/create"
         android:orderInCategory="100"
         app:showAsAction="ifRoom" />
 
