--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -36,4 +36,15 @@
         <item>@drawable/juanqui</item>
         <item>@drawable/pablo</item>
     </string-array>
+
+    <string-array name="entries_list_preference">
+        <item>on</item>
+        <item>off</item>
+    </string-array>
+
+    <string-array name="entryvalues_list_preference">
+        <item>Alpha</item>
+        <item>Beta</item>
+        <item>Charlie</item>
+    </string-array>
 </resources>
