--- a/app/src/main/res/layout/activity_post_photo.xml
+++ b/app/src/main/res/layout/activity_post_photo.xml
@@ -1,7 +1,10 @@
-<RelativeLayout android:id="@+id/root_view"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<RelativeLayout
+    android:id="@+id/root_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools">
     <LinearLayout
         android:id="@+id/contentRoot"
         android:layout_width="match_parent"
@@ -11,36 +14,107 @@
         android:orientation="vertical">
 
         <include layout="@layout/tool_bar"/>
-
-        <FrameLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="?attr/actionBarSize"
+            android:elevation="@dimen/default_elevation"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <ProgressBar
-                android:id="@+id/progress"
-                style="@android:style/Widget.ProgressBar"
-                android:layout_width="30dip"
-                android:layout_height="30dip"
-                android:layout_gravity="center_horizontal"
-                android:visibility="gone" />
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:adjustViewBounds="true"
-                android:visibility="visible"/>
-
-            <View
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:layout_gravity="bottom" />
-        </FrameLayout>
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:src="@drawable/img_toolbar_logo"
+                android:text="SHARE TO"
+                android:textColor="#333333"
+                android:textSize="18sp" />
+        </android.support.v7.widget.Toolbar>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
 
+            <ToggleButton
+                android:id="@+id/tbFollowers"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="16dp"
+                android:layout_weight="1"
+                android:background="@drawable/switch_publish_followers"
+                android:checked="true"
+                android:textColor="#ffffff"
+                android:textOff="FOLLOWERS"
+                android:textOn="FOLLOWERS" />
+
+            <ToggleButton
+                android:id="@+id/tbDirect"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="24dp"
+                android:layout_weight="1"
+                android:background="@drawable/switch_publish_direct"
+                android:textColor="#ffffff"
+                android:textOff="DIRECT"
+                android:textOn="DIRECT" />
+        </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="12dp"
+            card_view:cardCornerRadius="4dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="16dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp">
+
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="@dimen/publish_photo_thumbnail_size"
+                        android:layout_height="@dimen/publish_photo_thumbnail_size"
+                        android:layout_marginRight="16dp"
+                        android:background="#eeeeee" />
+
+                    <EditText
+                        android:id="@+id/etDescription"
+                        android:layout_width="0dp"
+                        android:layout_height="96dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:gravity="top"
+                        android:lines="3"
+                        android:padding="8dp"
+                        android:textColor="#333333"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <Switch
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:text="ADD TO PHOTO MAP" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/img_share_mock" />
 
 
     </LinearLayout>
