--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -21,7 +21,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="145dp"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/imag_setting"
@@ -36,10 +36,10 @@
                 android:layout_alignParentEnd="true" />
             <ImageView
                 android:id="@+id/imag_profile"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/profile"
-                android:layout_centerVertical="true"
+                android:layout_above="@+id/textView12"
                 android:layout_centerHorizontal="true" />
 
             <TextView
@@ -48,6 +48,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="My profile"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true" />
@@ -55,6 +57,7 @@
 
         </RelativeLayout>
         <LinearLayout
+            android:id="@+id/click"
             android:layout_marginTop="5dp"
             android:background="#335f50e1"
             android:layout_width="fill_parent"
