--- a/app/src/main/res/layout/fragment_more_qrcode.xml
+++ b/app/src/main/res/layout/fragment_more_qrcode.xml
@@ -13,10 +13,10 @@
 
         <ImageView
             android:id="@+id/imageView19"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/qr_code" />
+            android:src="@drawable/qrcode" />
     </LinearLayout>
 
 </LinearLayout>
