--- a/app/src/main/res/layout/item_more.xml
+++ b/app/src/main/res/layout/item_more.xml
@@ -11,12 +11,14 @@
         android:orientation="vertical">
 
         <ImageView
+            android:layout_marginTop="10dp"
             android:id="@+id/imageView21"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal" />
 
         <TextView
+            android:layout_marginTop="10dp"
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
