--- a/app/src/main/res/layout/tabbar_view.xml
+++ b/app/src/main/res/layout/tabbar_view.xml
@@ -7,10 +7,11 @@
 
     <ImageView
         android:id="@+id/tabImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="25dp"
+        android:layout_height="25dp" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/tabText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
