--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -15,8 +15,7 @@
             android:layout_width="@dimen/comment_avatar_size"
             android:layout_height="@dimen/comment_avatar_size"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            />
+            android:layout_marginRight="16dp" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -24,33 +23,76 @@
             android:orientation="vertical"
             android:theme="@style/AppTheme">
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Medium Text"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="@color/material_drawer_primary_text"
-                android:textSize="16dp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Mommy Momamo"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/material_drawer_primary_text"
+                    android:textSize="16dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Since 24 Oct 2015 4:24 p.m."
+                        android:textSize="10dp" />
+                </LinearLayout>
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/tvComment"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="16dp"
-                android:text="Lorem ipsum dolor sit amet"
+                android:text="Very gooood"
                 android:textColor="@color/material_drawer_secondary_text"
                 android:textSize="14dp" />
 
-            <TextView
-                android:id="@+id/tvAgo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="a moment ago"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/material_drawer_secondary_text"
-                android:textSize="12dp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvAgo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Like • "
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/material_drawer_secondary_text"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="Comment"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/material_drawer_secondary_text"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
 
         </LinearLayout>
 
