--- a/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_email_register.xml
@@ -162,16 +162,10 @@
                                         android:layout_marginLeft="20dp"
                                         android:textStyle="bold"
                                         android:textColor="#0FA6E0"
-                                        android:background="#fff"
+                                        android:background="@drawable/spinner_item_border"
                                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                                    <View
-                                        android:id="@+id/view1"
-                                        android:layout_width="120dp"
-                                        android:layout_height="1dip"
-                                        android:layout_marginLeft="20dp"
-                                        android:background="#0FA6E0"
-                                        android:layout_gravity="center_horizontal" />
+
                                 </LinearLayout>
                             </LinearLayout>
                         </LinearLayout>
