--- a/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
+++ b/app/src/main/res/layout/fragment_sign_up_by_phone_number_step_2.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="5dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="+6624241515"
-                android:textColorHint="#B6B6B6" />
+                android:textColorHint="#000" />
         </LinearLayout>
 
 
@@ -44,8 +44,8 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter you email address*" />
-
+                android:inputType="text"
+                android:hint="Enter your email address*" />
 
 
 
@@ -171,16 +171,9 @@
                                 android:layout_marginLeft="20dp"
                                 android:textStyle="bold"
                                 android:textColor="#0FA6E0"
-                                android:background="#fff"
+                                android:background="@drawable/spinner_item_border"
                                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                            <View
-                                android:id="@+id/view1"
-                                android:layout_width="120dp"
-                                android:layout_height="1dip"
-                                android:layout_marginLeft="20dp"
-                                android:background="#0FA6E0"
-                                android:layout_gravity="center_horizontal" />
                         </LinearLayout>
                     </LinearLayout>
 
