--- a/app/src/main/res/layout/layout_more_chat.xml
+++ b/app/src/main/res/layout/layout_more_chat.xml
@@ -1,66 +1,32 @@
-<natuan.org.androiddesigntablayout.widgets.SizeNotifierRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/chat_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="60dp"
+    android:background="#55000000"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right">
 
-        <include layout="@layout/tool_bar" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="65dp"
-        android:layout_marginTop="58dp"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:id="@+id/chat_font"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#cccccc"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <include layout="@layout/custom_layout_font" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/chat_attament"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#cccccc"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <include layout="@layout/item_attahment" />
-
-        </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/chat_more"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
             android:background="#323333"
             android:orientation="vertical"
-            android:layout_gravity="right">
+            android:layout_gravity="right"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
 
 
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
                 android:src="@drawable/search" />
 
             <TextView
@@ -82,7 +48,7 @@
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
-                android:src="@drawable/user_new" />
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -220,77 +186,6 @@
                 android:textSize="12dp" />
 
         </LinearLayout>
+    </RelativeLayout>
 
-        <ListView
-            android:id="@+id/chat_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@drawable/chat_divider"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:scrollbarStyle="outsideOverlay" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/bottomlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/emojiButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/chat_edit_text1"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/ic_msg_panel_smiles" />
-
-            <EditText
-                android:id="@+id/chat_edit_text1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_toEndOf="@id/emojiButton"
-                android:layout_toLeftOf="@+id/enter_chat1"
-                android:layout_toRightOf="@id/emojiButton"
-                android:layout_toStartOf="@+id/enter_chat1"
-                android:hint="@string/type_your_message"
-                android:inputType="textCapSentences"
-                android:maxLines="4"
-                android:paddingLeft="4dp"
-                android:scrollHorizontally="false"
-                android:singleLine="false"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:id="@+id/enter_chat1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/chat_edit_text1"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="8dp"
-                android:paddingEnd="17dp"
-                android:paddingLeft="13dp"
-                android:paddingRight="17dp"
-                android:paddingStart="13dp"
-                android:src="@drawable/ic_chat_send" />
-
-        </RelativeLayout>
-
-
-    </LinearLayout>
-
-</natuan.org.androiddesigntablayout.widgets.SizeNotifierRelativeLayout>
+</FrameLayout>
