--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -168,5 +168,6 @@
 
     <dimen name="image_frame_width">304dp</dimen>
     <dimen name="image_frame_height">144dp</dimen>
+    <dimen name="tool_bar_height">56dp</dimen>
 
 </resources>
