--- a/app/src/main/res/layout/item_attahment.xml
+++ b/app/src/main/res/layout/item_attahment.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/camera_new"
+                android:drawableTop="@drawable/attachment_photo_icon"
                 android:gravity="center"
                 android:text="Take photo"
                 android:textColor="#fff"
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/video_new"
+                android:drawableTop="@drawable/attachment_vdo_icon"
                 android:gravity="center"
                 android:text="Video"
                 android:textColor="#fff"
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/voice_new"
+                android:drawableTop="@drawable/attachment_voice_icon"
                 android:gravity="center"
                 android:text="Voice"
                 android:textColor="#fff"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/picture_new"
+                android:drawableTop="@drawable/attachment_gallery_icon"
                 android:gravity="center"
                 android:text="Photo gallery"
                 android:textColor="#fff"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/location_new"
+                android:drawableTop="@drawable/attachment_location_icon"
                 android:gravity="center"
                 android:text="Location"
                 android:textColor="#fff"
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:drawableTop="@drawable/user_new"
+                android:drawableTop="@drawable/attachment_contact_icon"
                 android:gravity="center"
                 android:text="Contact"
                 android:textColor="#fff"
@@ -105,7 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:drawableTop="@drawable/pen_ww"
+                android:drawableTop="@drawable/attachment_doodle_icon"
                 android:gravity="center"
                 android:text="Put doodle"
                 android:textColor="#fff"
